@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.star.gr" version="2.3.2" name="STAR Player" provider-name="Twilight0">
+<addon id="plugin.video.star.gr" version="2.3.3" name="STAR Player" provider-name="Twilight0">
 	<requires>
 		<import addon="xbmc.addon" version="16.1.000"/>
 		<import addon="script.module.tulip" version="2.8.2" />
@@ -20,7 +20,10 @@
 		<source>https://github.com/Twilight0/plugin.video.star.gr</source>
 		<website>http://www.star.gr/</website>
 		<size>228454</size>
-		<news>[B]2.3.1[/B]
+		<news>[B]2.3.3[/B]
+- Resolve live tv web page instead or provide live url directly
+
+[B]2.3.2[/B]
 - Bumped dependencies
 - Updated youtube api key
 
